k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app
  labels:
    app: springboot
spec:
  type: ClusterIP
  selector:
    app: springboot
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
